[package]
name = "uwiki-cli"
version = "0.1.0"
authors = ["Jay Vana <jaysvana@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
handlebars = "4.0"
log = "0.4"
maplit = "1.0"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.3"
tempfile = "3.2"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
xdg = "2.0"
